fix visible slider with adaptive

--- a/src/entities/slider/Slider.module.scss
+++ b/src/entities/slider/Slider.module.scss
@@ -4,8 +4,12 @@
    margin-right: 70px;
 }
 
+.wrapper {
+	display: block;
+}
+
 @media (width <= 1024px) {
-   .slider {
+   .wrapper {
       display: none;
    }
 }
